<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
   	android:background="?android:attr/buttonBarButtonStyle"
    >
    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    >
    
    <Spinner
        android:id="@+id/spnPlayerSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_slim_selector"
        android:textColor="@color/text"
    />
    
    <TextView
        android:id="@+id/tvFGM"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/spnPlayerSelect"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="2dp"
        android:text="@string/fgm"
        android:textSize="20sp"
        android:textColor="@color/text"
     />
    
    <EditText
        android:id="@+id/etFGM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tvFGM"
        android:layout_alignBottom="@id/tvFGM"
        android:layout_below="@id/spnPlayerSelect"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_holo_dark" 
        android:ems="2"
        android:inputType="number"
        android:textSize="20sp"
    />
    
    <TextView
        android:id="@+id/tvFTA"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/etFGM"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="2dp"
        android:text="@string/fta"
        android:textSize="20sp"
        android:textColor="@color/text"
     />
    
    <EditText
        android:id="@+id/etFTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignLeft="@id/etFGM"
		android:layout_alignBottom="@id/tvFTA"
        android:layout_below="@id/etFGM"
		android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_holo_dark" 
        android:ems="2"
        android:inputType="number"
        android:textSize="20sp"
    />
    
    <TextView
        android:id="@+id/tv3PM"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/etFTA"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="2dp"
        android:text="@string/threepm"
        android:textSize="20sp"
        android:textColor="@color/text"
     />
    
    <EditText
        android:id="@+id/et3pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignLeft="@id/etFTA"
		android:layout_alignBottom="@id/tv3PM"
        android:layout_below="@id/etFTA"
		android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_holo_dark" 
        android:ems="2"
        android:inputType="number"
        android:textSize="20sp"
    />
    
    <TextView
        android:id="@+id/tvTotPts"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/et3pm"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="2dp"
        android:text="@string/totpts"
        android:textSize="20sp"
        android:textColor="@color/text"
     />
    
    <EditText
        android:id="@+id/etTotPts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignLeft="@id/et3pm"
		android:layout_alignBottom="@id/tvTotPts"
        android:layout_below="@id/et3pm"
		android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_holo_dark" 
        android:ems="2"
        android:inputType="number"
        android:textSize="20sp"
    />
    
    <TextView
        android:id="@+id/tvFTP"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/tvTotPts"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="2dp"
        android:text="@string/totpts"
        android:textSize="20sp"
        android:textColor="@color/text"
     />
    
    <EditText
        android:id="@+id/etFTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignLeft="@id/etTotPts"
		android:layout_alignBottom="@id/tvFTP"
        android:layout_below="@id/etTotPts"
		android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_holo_dark" 
        android:ems="2"
        android:inputType="number"
        android:textSize="20sp"
    />
    
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvFTP"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_default_holo_dark" 
        android:text="@string/update"
        android:textColor="@color/text"
    />
 
</RelativeLayout>
</ScrollView>